--- a/css/style.css
+++ b/css/style.css
@@ -1,214 +1,122 @@
-/*#6495ED*/
 
 legend {
-    font-size: 2rem;
+	font-size: 2rem;
 }
 
+main {
+	max-width: 50rem;
+}
 
 body {
-    font: Arial, Helvetica, Helvetica Neue, sans-serif;
-    font-size: 1rem;
-    background-color: #DDD;
-    line-height: 1.5;
+	font-family: Arial, Helvetica, Helvetica Neue, sans-serif;
+	font-size: 1rem;
+	background-color: #DDD;
+	line-height: 1.5;
 }
 
-
-@media screen and (max-width:25rem) {
-    
-    
-}
-       input[type=button] {
-        
-  background-color: #6495ED;
-  color: #ffffff;
-  border-radius: 4px;
-    }
-  
-    
+input[type=button] {
+	background-color: #6495ED;
+	color: #f5f5f5;
+	border-radius: 4px;
 }
 
-  
+@media (max-width:25rem) {}
+
 .contain {
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1em;
+	max-width: 50rem;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 1em;
 }
-
-
 
 input:focus,
-textarea:focus {
-  outline: 3px solid gold;
-}
+textarea:focus {}
 
-input,textarea,button {
-  width: 100%;
-  border: 1px solid #000;
+input,
+textarea {
+	width: 80%;
+	background-color: #f5f5f5;
 }
-
 
 form {
-  display: grid;
-  grid-gap: 20px;
+	display: grid;
+	grid-gap: 20px;
 }
 
 form label {
-  display: block;
+	display: block;
 }
 
+@media (min-width:25rem) and (max-width:40rem) {
+	input[type=button] {
+		background-color: #6495ED;
+		color: #ffffff;
+		border-radius: 4px;
+	}
+	form label {
+		display: block;
+	}
+	textarea {
+		float: left;
+	}
+}
 
-
-@media (min-width:40rem)  { 
-
-      
-input[type=button] {
-        
-  background-color: #6495ED;
-  color: #ffffff;
-  border-radius: 4px;
-    }
+@media (min-width: 40rem) and (max-width: 50rem) {
+	#message {
+		background-color: #F5F5F5;
+		width: 100%;
+		position: relative;
+		right: 330px;
+		padding-left: 300px;
+		display: block;
+	}
+	input[type=button] {
+		background-color: #6495ED;
+		color: #ffffff;
+		border-radius: 4px;
+	}
+	form {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 20px;
+	}
+	input,
+	textarea {
+		padding: 2em;
+		margin: 2em;
+	}
+	@media (min-width:50rem) {
+		#message {
+			background-color: #F5F5F5;
+			width: 100%;
+			position: relative;
+			right: 330px;
+			padding-left: 300px;
+			display: block;
+		}
+		input[type=button] {
+			background-color: #6495ED;
+			color: #ffffff;
+			border-radius: 4px;
+		}
+		form {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-gap: 20px;
+		}
+		input,
+		textarea {
+			padding: 2em;
+			margin: 2em;
+		}
+	}
+}
   
     
-
-
-form label {
-  display: block;
-}
-
-textarea {
-    float:left;
-}
-
-
-input,
-textarea {
-  padding: 1em;
-} 
-}
-
-
-
-
-@media (min-width:40rem) and (max-width:50rem){
-    
-    input[type=button] {
-        
-  background-color: #6495ED;
-  color: #ffffff;
-  border-radius: 4px;
-    }
-    
-    form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-}
-
-    
-input,
-textarea {
-  padding: 2em;
-  margin: 2em;
-} 
-}
-
-  
-    
-    
-}
-
-
-/*
-
-
-
-
-
-    label {
-    display: block;
-    color: #000000;
-}
-
-input[type=text], .message {
-  width: 10%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-      text-align: left;
-}
-
-  input[type=button] {
-        
-  background-color: #6495ED;
-                  color: #ffffff;
-border-radius: 4px;
-    }
     
 
 
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-}
 
-
-
-
-legend {
-    font-size: 2rem;
-}
-
-
-@media only screen and (max-width:25rem)  { 
-
-     input[type=text], {
-  width: 50%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  background-color: #F5F5F5;
-  display: inline-block;
-  box-sizing: border-box;
-           text-align: left;
-
-}  
-
-    
-    label {
-    display: block;
-    color: #000000;
-}
-    
-    div {
-        
-          background-color: #F5F5F5;
-             width: 50%;
-              padding: 12px 20px;
-
-
-
-    }
-
-    
-    input[type=button] {
-        
-  background-color: green;
-            color: #ffffff;
-
-        border-radius: 4px;
-    }
-    
-}
-    
-
-*/
 
 
 
